# hunter

cmake/configs/: default.cmake
cmake/projects/luajit/: hunter.cmake
examples/luajit/: CMakeLists.txt  boo.cpp
